--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -105,7 +105,7 @@
   }
 
   /* Markdown content styles */
-  .md-container {
+  .md-container,.markdown-content {
     @apply text-foreground;
 
     p {
@@ -113,15 +113,15 @@
     }
 
     h1 {
-      @apply text-lg font-semibold pt-2;
+      @apply text-2xl font-semibold mb-4;
     }
 
     h2 {
-      @apply text-lg pt-2;
+      @apply text-xl mb-4;
     }
 
     h3 {
-      @apply text-base font-medium pt-2;
+      @apply text-lg text-base font-medium mb-4;
     }
 
     ul {
